syntax = "proto3";
package spot.auth;

service AuthService {
	// Authentication after initial setup
	rpc Authenticate(AuthRequest) returns (AuthResponse) {}
}

message AuthRequest {
	string email = 1;
	string password = 2;
}

message AuthResponse {
	// true = success, false = failure
	bool status = 1;

	// error?
	optional string error = 2;

	// nullable (must be present on success)
	optional User user = 3;
}

message User {
	string email = 1;
	// ...
}
