syntax = "proto3";
package spot.db;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

import "./auth.proto";
import "./common.proto";

service DbService {
	// # of table entries
	rpc TableEntries(google.protobuf.Empty) returns (google.protobuf.UInt32Value) {}

	// Insert user/password
	rpc InsertUserRecord(spot.auth.AuthRequest) returns (spot.auth.AuthResponse) {}

	// User/password exists?
	rpc UserPassPairExists(spot.auth.AuthRequest) returns (spot.common.FaillableBoolean) {}
}
